mapping nvi related field from h_dbh table